# taxCalculator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  const.py  exception.py  init.toml  init_sample.toml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  codeql-analysis.yml  pylint.yml
capital_gain/: calculator.py  capital_summary.py  comments.py  dividend_summary.py  exception.py  model.py  section104.py  summary.py
dividend/: const.py  dividend_calculator.py  dividend_data_format.py
excel_format/: const.py  format.py  write_dataframe.py
excel_output/: capital_gain_list.py  dividend_list.py  utility.py
gui/: import_export.py  kivymd.kv  main_app.py  table_display.py  table_presentation.py  tax_year_widget.py  test.py
parser/: ibkr.py
statement_parser/: ibkr.py
test/: testcgtcalc.py
tests/: test.pylint  test_cgtcalc.py  test_cgtsummary.py  test_dividend_summary.py  test_short_sale.py  testcgtcalc.py
xml_import/: __init__.py  exception.py  importer.py  xml_to_panda.py
