[tool.poetry]
name = "taxcalculator"
version = "0.1.0"
description = ""
authors = ["Alex Pun <alexpung@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
iso3166 = "^2.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
