[tool.poetry]
name = "taxcalculator"
version = "0.1.0"
description = "A helper for lising out your dividend and capital gains for UK tax reporting"
authors = ["Alex Pun <alexpung@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alexpung/taxCalculator"
repository = "https://github.com/alexpung/taxCalculator"
keywords = [
    "capital gain",
    "Interactive Brokers",
    "IBKR",
    "UK tax"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial"
]

[tool.poetry.dependencies]
python = "^3.10"
iso3166 = "^2.0.2"
lxml = "^4.7.1"
iso4217 = "^1.7.20211001"
tomlkit = "^0.10.0"
XlsxWriter = "^3.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pre-commit = "^2.16.0"
black = "^21.12b0"
mypy = "^0.920"
pytest = "^6.2.5"
flake8 = "^4.0.1"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 88

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "no-else-break",
    "no-else-continue",
    "no-else-raise",
    "no-else-return",
    "fixme",
    "R"
]

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true

[tool.mypy]
show_error_codes = true
show_none_errors = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.coverage.html]
skip_empty = true
